# AssetStudio

./: CHANGELOG.md  README.md
.github/workflows/: build.yml
AssetStudio/: AssetStudio.csproj  AssetsManager.cs  ColorConsole.cs  ColorConsoleHelper.cs  ImportHelper.cs
AssetStudio.PInvoke/: AssetStudio.PInvoke.csproj
AssetStudio/Classes/: AnimationClip.cs  AssetBundle.cs  PreloadData.cs  Sprite.cs  Texture2D.cs
AssetStudio/Extensions/: BinaryReaderExtensions.cs
AssetStudioCLI/: AssetStudioCLI.csproj  CLILogger.cs  Exporter.cs  Program.cs  ReadMe.md  Studio.cs
AssetStudioCLI/Components/: AssetItem.cs  BaseNode.cs  GameObjectNode.cs
AssetStudioCLI/Options/: CLIOptions.cs
AssetStudioFBXNative/: CMakeLists.txt
AssetStudioFBXWrapper/: AssetStudioFBXWrapper.csproj
AssetStudioGUI/: AboutForm.cs  AssetStudioGUI.csproj  AssetStudioGUIForm.Designer.cs  AssetStudioGUIForm.cs  ExportOptions.Designer.cs  ExportOptions.cs  ExportOptions.resx  GUILogger.cs  Studio.cs
AssetStudioGUI/Components/: ConsoleWindow.cs  LnkReader.cs
AssetStudioGUI/Properties/: Settings.Designer.cs  Settings.settings
AssetStudioUtility/: AssemblyLoader.cs  AssetStudioUtility.csproj
AssetStudioUtility/CubismLive2DExtractor/: CubismFadeMotion.cs  CubismKeyframeData.cs  CubismMotion3Converter.cs  CubismMotion3Json.cs  Live2DExtractor.cs  Live2DMotionMode.cs
Texture2DDecoderWrapper/: Texture2DDecoderWrapper.csproj
